--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -60,10 +60,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
             
             ## Armbian Image Verification
             - sha256sum
@@ -133,10 +133,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -222,10 +222,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -295,10 +295,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -368,10 +368,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -441,10 +441,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -514,10 +514,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -587,10 +587,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
@@ -660,10 +660,10 @@ jobs:
         run: |
           cat <<EOF | sed -E 's/^  //' > Release.md
             ## Armbian Image information
-            - Default username: root
-            - Default password: 1234
-            - Install command: armbian-install
-            - Update command: armbian-update
+            - Default username: \`root\`
+            - Default password: \`1234\`
+            - Install command: \`armbian-install\`
+            - Update command: \`armbian-update\`
 
             ## Armbian Image Verification
             - sha256sum
