--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -27,7 +27,7 @@ jobs:
           ASSETS="${{ steps.get_release.outputs.assets }}"
           IFS=';'
           for FILE_URL in $ASSETS; do
-            wget -q "$FILE_URL"
+            aria2c --conf-path=${{ github.workspace }}/aria2.conf "$FILE_URL"
           done
       
       - name: Get Radxa-ROCK-3C-Armbian release ID and delete all files
