--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -836,26 +836,7 @@ jobs:
       
       - name: Download OrangePi-One files
         run: |
-          ASSETS="https://dl.armbian.com/orangepione/Bookworm_current_xfce.torrent;
-          https://dl.armbian.com/orangepione/Bookworm_current_xfce.sha;
-          https://dl.armbian.com/orangepione/Bookworm_current_xfce.asc;
-          https://dl.armbian.com/orangepione/Bookworm_current_xfce;
-          https://dl.armbian.com/orangepione/Noble_current_xfce.torrent;
-          https://dl.armbian.com/orangepione/Noble_current_xfce.sha;
-          https://dl.armbian.com/orangepione/Noble_current_xfce.asc;
-          https://dl.armbian.com/orangepione/Noble_current_xfce;
-          https://dl.armbian.com/orangepione/Bookworm_current_minimal.torrent;
-          https://dl.armbian.com/orangepione/Bookworm_current_minimal.sha;
-          https://dl.armbian.com/orangepione/Bookworm_current_minimal.asc;
-          https://dl.armbian.com/orangepione/Bookworm_current_minimal;
-          https://dl.armbian.com/orangepione/Noble_current_minimal.torrent;
-          https://dl.armbian.com/orangepione/Noble_current_minimal.sha;
-          https://dl.armbian.com/orangepione/Noble_current_minimal.asc;
-          https://dl.armbian.com/orangepione/Noble_current_minimal;
-          https://dl.armbian.com/orangepione/Trixie_current_minimal.torrent;
-          https://dl.armbian.com/orangepione/Trixie_current_minimal.sha;
-          https://dl.armbian.com/orangepione/Trixie_current_minimal.asc;
-          https://dl.armbian.com/orangepione/Trixie_current_minimal"
+          ASSETS="https://dl.armbian.com/orangepione/Bookworm_current_xfce.torrent;https://dl.armbian.com/orangepione/Bookworm_current_xfce.sha;https://dl.armbian.com/orangepione/Bookworm_current_xfce.asc;https://dl.armbian.com/orangepione/Bookworm_current_xfce;https://dl.armbian.com/orangepione/Noble_current_xfce.torrent;https://dl.armbian.com/orangepione/Noble_current_xfce.sha;https://dl.armbian.com/orangepione/Noble_current_xfce.asc;https://dl.armbian.com/orangepione/Noble_current_xfce;https://dl.armbian.com/orangepione/Bookworm_current_minimal.torrent;https://dl.armbian.com/orangepione/Bookworm_current_minimal.sha;https://dl.armbian.com/orangepione/Bookworm_current_minimal.asc;https://dl.armbian.com/orangepione/Bookworm_current_minimal;https://dl.armbian.com/orangepione/Noble_current_minimal.torrent;https://dl.armbian.com/orangepione/Noble_current_minimal.sha;https://dl.armbian.com/orangepione/Noble_current_minimal.asc;https://dl.armbian.com/orangepione/Noble_current_minimal;https://dl.armbian.com/orangepione/Trixie_current_minimal.torrent;https://dl.armbian.com/orangepione/Trixie_current_minimal.sha;https://dl.armbian.com/orangepione/Trixie_current_minimal.asc;https://dl.armbian.com/orangepione/Trixie_current_minimal;"
           IFS=';'
           for FILE_URL in $ASSETS; do
             aria2c --conf-path=${{ github.workspace }}/aria2.conf "$FILE_URL"
