--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -161,18 +161,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Get latest release info from ophub/amlogic-s9xxx-armbian
-        id: get_latest_release
+      - name: Get all tags from ophub/amlogic-s9xxx-armbian
+        id: get_all_tags
         run: |
-          RELEASE_INFO=$(curl -s https://api.github.com/repos/ophub/amlogic-s9xxx-armbian/releases/latest)
-          TAG_NAME=$(echo $RELEASE_INFO | jq -r '.tag_name')
-          echo "::set-output name=tag_name::$TAG_NAME"
+          ALL_TAGS=$(curl -s https://api.github.com/repos/ophub/amlogic-s9xxx-armbian/tags | jq -r '.[] | select(.name | contains("save_")) | .name' | sort -r)
+          echo "::set-output name=all_tags::$ALL_TAGS"
       
-      - name: Extract release date from tag_name
+      - name: Extract latest release date from tags
         id: extract_date
         run: |
-          TAG_NAME="${{ steps.get_latest_release.outputs.tag_name }}"
-          RELEASE_DATE=$(echo $TAG_NAME | grep -oP '\d{4}\.\d{2}')
+          ALL_TAGS="${{ steps.get_all_tags.outputs.all_tags }}"
+          LATEST_TAG=$(echo "$ALL_TAGS" | head -n1)
+          RELEASE_DATE=$(echo "$LATEST_TAG" | grep -oP 'save_\K\d{4}\.\d{2}')
           echo "::set-output name=release_date::$RELEASE_DATE"
 
       - name: Download files from specified releases
@@ -181,15 +181,21 @@ jobs:
           RELEASE_DATE="${{ steps.extract_date.outputs.release_date }}"
           BASE_URL="https://api.github.com/repos/ophub/amlogic-s9xxx-armbian/releases/tags/"
           
-          # RELEASE_TAGS=("Armbian_noble_save_$RELEASE_DATE" "Armbian_jammy_save_$RELEASE_DATE" "Armbian_bullseye_save_$RELEASE_DATE" "Armbian_bookworm_save_$RELEASE_DATE" "Armbian_HassIoSupervisor_bookworm_save_$RELEASE_DATE")
-          RELEASE_TAGS=("Armbian_noble_save_$RELEASE_DATE" "Armbian_jammy_save_$RELEASE_DATE" "Armbian_bullseye_save_$RELEASE_DATE" "Armbian_bookworm_save_$RELEASE_DATE")
+          RELEASE_TAGS=(
+            "Armbian_noble_save_$RELEASE_DATE"
+            "Armbian_jammy_save_$RELEASE_DATE"
+            "Armbian_bullseye_save_$RELEASE_DATE"
+            "Armbian_bookworm_save_$RELEASE_DATE"
+          )
           
           for TAG in "${RELEASE_TAGS[@]}"; do
-            RELEASE_INFO=$(curl -s "$BASE_URL$TAG")
-            ASSETS=$(echo $RELEASE_INFO | jq -r '.assets[] | select(.name | contains("emb3531")) | .browser_download_url')
-            for FILE_URL in $ASSETS; do
+            FILE_URL=$(curl -s "$BASE_URL$TAG" | jq -r '.assets[] | select(.name | contains("emb3531")) | .browser_download_url')
+            
+            if [ -n "$FILE_URL" ]; then
               aria2c --conf-path=${{ github.workspace }}/aria2.conf "$FILE_URL"
-            done
+            else
+              echo "No emb3531 files found for tag $TAG"
+            fi
           done
 
       - name: Get EMB-3531-Armbian release ID and delete all files
