--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -164,7 +164,7 @@ jobs:
       - name: Get all tags from ophub/amlogic-s9xxx-armbian
         id: get_all_tags
         run: |
-          ALL_TAGS=$(curl -s https://api.github.com/repos/ophub/amlogic-s9xxx-armbian/tags | jq -r '.[] | select(.name | contains("save_")) | .name' | sort -r)
+          ALL_TAGS=$(curl -s https://api.github.com/repos/ophub/amlogic-s9xxx-armbian/tags | jq -r '.[] | select(contains("save_"))' | sort -r)
           echo "::set-output name=all_tags::$ALL_TAGS"
       
       - name: Extract latest release date from tags
