--- a/.github/workflows/sync-armbian-releases.yml
+++ b/.github/workflows/sync-armbian-releases.yml
@@ -84,6 +84,8 @@ jobs:
 
   sync_orangepi-3b:
     runs-on: ubuntu-latest
+    needs: sync_rock-3c
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -157,6 +159,8 @@ jobs:
 
   sync_emb-3531:
     runs-on: ubuntu-latest
+    needs: sync_orangepi-3b
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -292,6 +296,8 @@ jobs:
 
   sync_orangepi-zero:
     runs-on: ubuntu-latest
+    needs: sync_emb-3531
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -365,6 +371,8 @@ jobs:
 
   sync_onecloud:
     runs-on: ubuntu-latest
+    needs: sync_orangepi-zero
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -438,6 +446,8 @@ jobs:
 
   sync_nanopc-t4:
     runs-on: ubuntu-latest
+    needs: sync_onecloud
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -511,6 +521,8 @@ jobs:
 
   sync_radxa-cubie-a5e:
     runs-on: ubuntu-latest
+    needs: sync_nanopc-t4
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -584,6 +596,8 @@ jobs:
 
   sync_nanopi-neo4:
     runs-on: ubuntu-latest
+    needs: sync_radxa-cubie-a5e
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -657,6 +671,8 @@ jobs:
 
   sync_nanopi-m4:
     runs-on: ubuntu-latest
+    needs: sync_nanopi-neo4
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -730,6 +746,8 @@ jobs:
 
   sync_orangepi-zero3:
     runs-on: ubuntu-latest
+    needs: sync_nanopi-m4
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -803,6 +821,8 @@ jobs:
 
   sync_nanopi-k2:
     runs-on: ubuntu-latest
+    needs: sync_orangepi-zero3
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -876,6 +896,8 @@ jobs:
 
   sync_orangepi-one:
     runs-on: ubuntu-latest
+    needs: sync_nanopi-k2
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -949,6 +971,8 @@ jobs:
 
   sync_orangepi-zero2:
     runs-on: ubuntu-latest
+    needs: sync_orangepi-one
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
